--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,3 +7,11 @@
 input {
     @apply outline-none;
 }
+
+.page {
+    @apply p-16 w-full;
+}
+
+h1 {
+    @apply text-4xl font-bold text-primary;
+}
