--- a/src/css/style.css
+++ b/src/css/style.css
@@ -9,9 +9,18 @@ input {
 }
 
 .page {
-    @apply p-16 w-full;
+    @apply px-6 py-8 w-full;
+
+    @screen md {
+        @apply p-16;
+    }
+
+    h1 {
+        @apply text-2xl font-bold text-primary;
+
+        @screen md {
+            @apply text-4xl;
+        }
+    }
 }
 
-h1 {
-    @apply text-4xl font-bold text-primary;
-}
